# agent-memory-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.fips  Dockerfile.standalone  LANGCHAIN_INTEGRATION.md  LICENSE  LICENSE.m  METRICS_COLLECTION_GUIDE.md  METRICS_COLLECTION_STATUS.md  METRICS_REPORT.md  Makefile  README.md  SKILL.md  SYSTEM_TESTING.md  SYSTEM_TEST_METRICS_PLAN.md  TASK_MEMORY.md  _typos.toml  check_schema.py  client-tools.md  client_test.py  config.py  create_replay_fixtures.py  docker-bake.json  docker-compose-task-workers.yml  docker-compose.yml  dump.rdb  example_usage.py  healthcheck.py  improving_test_coverage.md  long_conversation_memory.md  long_term_memory.py  main.py  memory.py  mkdocs.yml  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  mcp-config.json  post-create.sh  start-services.sh  stop-services.sh
V0/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose-task-workers.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
agent-memory-client/: README.md  pyproject.toml
agent-memory-client/agent-memory-client-java/: RELEASE.md  build.gradle.kts  jreleaser.yml  settings.gradle.kts
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/: MemoryAPIClient.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/exceptions/: MemoryClientException.java  MemoryNotFoundException.java  MemoryServerException.java  MemoryValidationException.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/models/common/: AckResponse.java  TagFilter.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/models/health/: HealthCheckResponse.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/models/longtermemory/: ForgetResponse.java  MemoryRecord.java  MemoryRecordResult.java  MemoryRecordResults.java  MemoryType.java  SearchRequest.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/models/summaryview/: CreateSummaryViewRequest.java  SummaryViewPartitionResult.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/models/workingmemory/: MemoryMessage.java  MemoryStrategyConfig.java  MergeStrategy.java  SessionListResponse.java  WorkingMemory.java  WorkingMemoryResponse.java  WorkingMemoryResult.java
agent-memory-client/agent-memory-client-java/src/main/java/com/redis/agentmemory/services/: BaseService.java  HealthService.java  LongTermMemoryService.java  MemoryHydrationService.java  TaskService.java  WorkingMemoryService.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/: MemoryAPIClientTest.java  MemoryRecordBuilderTest.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/integration/: BaseIntegrationTest.java  EndToEndIntegrationTest.java  LongTermMemoryIntegrationTest.java  MemoryHydrationIntegrationTest.java  WorkingMemoryIntegrationTest.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/models/: JsonSerializationTest.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/models/common/: TagFilterTest.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/models/longtermemory/: MemoryRecordTest.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/models/workingmemory/: MemoryMessageTest.java  WorkingMemoryTest.java
agent-memory-client/agent-memory-client-java/src/test/java/com/redis/agentmemory/services/: HealthServiceTest.java  LongTermMemoryServiceTest.java  MemoryHydrationServiceTest.java  SummaryViewServiceTest.java  TaskServiceTest.java  WorkingMemoryServiceTest.java
agent-memory-client/agent-memory-client-js/: README.md  package-lock.json  package.json  tsconfig.json
agent-memory-client/agent-memory-client-js/src/: client.test.ts  client.ts  errors.test.ts  errors.ts  filters.test.ts  filters.ts  index.ts  models.test.ts  models.ts
agent-memory-client/agent_memory_client/: __init__.py  client.py  filters.py  models.py  tool_schema.py
agent-memory-client/agent_memory_client/integrations/: __init__.py  langchain.py
agent-memory-client/agent_memory_client/utils/: __init__.py  tag_codec.py
agent-memory-client/tests/: test_basic.py  test_client.py  test_langchain_integration.py  test_tool_schemas.py
agent_memory_server/: __init__.py  api.py  auth.py  cli.py  compaction.md  config.py  dependencies.py  dev_server.py  docket_tasks.py  extraction.py  filters.py  fips.py  healthcheck.py  litellm_pickle_compat.py  llm_client.py  llms.py  logging.py  long_term_memory.py  main.py  mcp.py  memory_strategies.py  memory_vector_db.py  memory_vector_db_factory.py  messages.py  migrations.py  models.py  pluggable-long-term-memory.md  prompt_security.py  redis_cloud_migration.py  summarization.py  summary_views.py  tasks.py  test_config.py  utils.py  vectorstore_adapter.py  vectorstore_factory.py  worker.py  working_memory.py  working_memory_index.py
docs/: CLAUDE.md  README.md  advanced-memory-vector-db.md  advanced-topics-index.md  agent-examples.md  api-reference-index.md  api.md  authentication.md  aws-bedrock.md  cli.md  configuration.md  contextual-grounding.md  custom-memory-vector-db.md  developer-guide-index.md  development.md  embedding-providers.md  getting-started.md  index.md  java-sdk.md  langchain-integration.md  llm-providers.md  long-term-memory.md  mcp.md  memory-deduplication-analysis.md  memory-editing.md  memory-extraction-strategies.md  memory-integration-patterns.md  memory-lifecycle.md  memory-strategies.md  memory-types.md  operations-guide-index.md  orchestrate-setup-guide.md  python-sdk-index.md  python-sdk.md  query-optimization.md  quick-start.md  recency-boost.md  redis-cloud-migration.md  security-custom-prompts.md  summary-views.md  (+5 more)
examples/: README.md  ai_tutor.py  memory_editing_agent.py  (+9 more)
(+318 files in other folders)
